; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_ip_dn_glue.c_oid_fill.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_ip_dn_glue.c_oid_fill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dn_id = type { i32, i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dn_id*, i32, i32, i64)* @oid_fill to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @oid_fill(%struct.dn_id* %0, i32 %1, i32 %2, i64 %3) #0 {
  %5 = alloca %struct.dn_id*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store %struct.dn_id* %0, %struct.dn_id** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i64 %3, i64* %8, align 8
  %9 = load i32, i32* %6, align 4
  %10 = load %struct.dn_id*, %struct.dn_id** %5, align 8
  %11 = getelementptr inbounds %struct.dn_id, %struct.dn_id* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load %struct.dn_id*, %struct.dn_id** %5, align 8
  %14 = getelementptr inbounds %struct.dn_id, %struct.dn_id* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  %15 = load %struct.dn_id*, %struct.dn_id** %5, align 8
  %16 = getelementptr inbounds %struct.dn_id, %struct.dn_id* %15, i32 0, i32 3
  store i64 0, i64* %16, align 8
  %17 = load i64, i64* %8, align 8
  %18 = load %struct.dn_id*, %struct.dn_id** %5, align 8
  %19 = getelementptr inbounds %struct.dn_id, %struct.dn_id* %18, i32 0, i32 2
  store i64 %17, i64* %19, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
